# charlesstable

./: package-lock.json  package.json  vite.config.ts
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/: Modelfile  expertFile  jestFile  sageFile
src-tauri/src/: lib.rs  main.rs
src/lib/stores/: settings.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/advanced/: +page.svelte  Fetch.svelte  Generate.svelte
src/routes/data/: +page.svelte
src/routes/help/: +page.svelte  Export.svelte
src/routes/home/: +page.svelte
src/routes/message/: +page.svelte  Authenticate.svelte  Fetch.svelte  Generate.svelte  GetPersonInfo.svelte
src/routes/noOllama/: +page.svelte  LlamaSummon.svelte  NoInstall.svelte
src/routes/settings/: +page.svelte
